InternexDev_Sandbox/src/objects/GL_Object__c.object
<CustomObject>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <label>Business Unit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GL_Account_Name__c</fullName>
        <label>GL Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GL_Number__c</fullName>
        <label>GL Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GL_Reference__c</fullName>
        <label>GL Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>GL Object</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>GL Object Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GL Objects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>